slider has been changed

--- a/demo.css
+++ b/demo.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.cdnfonts.com/css/ica-rubrik-black');
+/* @import url('https://fonts.cdnfonts.com/css/ica-rubrik-black');
 @import url('https://fonts.cdnfonts.com/css/poppins');
 
 .banner{
@@ -131,4 +131,4 @@
     .banner .content h1{
         font-size: 5em;
     }
-}
+} */
